# ble_and_net_for_esp32_app

./: CMakeLists.txt  README.md  ble.cpp  ble.h  ble_devices_scan_list.cpp  ble_devices_scan_list.h  ble_devices_scan_list.ui  widget.cpp  widget.h  widget.ui
